Fixes unintended large spacing in grid search result.

--- a/tool-ui/src/main/webapp/style/v3/search.less
+++ b/tool-ui/src/main/webapp/style/v3/search.less
@@ -42,6 +42,11 @@
   top: 0;
 }
 
+.searchResult-list {
+  padding-top: @gap-large;
+  width: 100%;
+}
+
 .searchResult-actions {
   border-left: @-actions-borderWidth solid @color-separator;
   box-sizing: border-box;
